fix: contract verified list head wrap force

--- a/apps/block_scout_web/assets/css/components/_stakes_table.scss
+++ b/apps/block_scout_web/assets/css/components/_stakes_table.scss
@@ -124,6 +124,7 @@ $stakes-link-color: $primary !default;
   padding: 21px $stakes-table-cell-separation 21px 0;
   position: relative;
   z-index: 0;
+  white-space: nowrap;
 
   .i-tooltip {
     position: relative;
